--- a/style.css
+++ b/style.css
@@ -179,3 +179,14 @@
       width: 100%;
   }
 }
+.skill {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .skill img {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
