--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@
 
 .about-content{
   display:flex;
-  flex-wrap:wrap;
+  flex-wrap:nowrap;
   
 }
 @media only screen and  (max-width: 1200px) {
@@ -177,10 +177,14 @@
 
   .image-container {
     order: -1; /* Move the image container to the top */
+    width:50%;
+    height:auto;
+    margin-bottom: 30px;
   }
 
   .text-container {
-    text-align: center;
+    text-align: left;
+    font-size: 20px;
   }
 
   .navbar{
