--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   #about{
     background-color: #f2f2f2;
     padding: 40px 0;
-    align-items: center;
+   
     
   }
   
@@ -49,7 +49,7 @@
   #contact {
     background-color: #f2f2f2;
     padding: 40px 0;
-    font-size: 20px;
+    font-size: 30px;
   }
   
   .achievements-content,
@@ -60,29 +60,32 @@
   
   
   .image-container {
-    flex: 0 0 200px;
+    width:40%;
+    height:auto;
+    margin-bottom: 30px;
+    flex: 0 0 550px;
     border-radius: 50%;
     overflow: hidden;
     margin-right: 30px;
-    border: 5px solid #000;
-    box-shadow: 4px 4px rgb(77, 2, 2);
+    border: 15px solid #000;
     align-content: center;
     display: flex;
-    width: 25%;
+    
     aspect-ratio: 1/1; /* Maintain the aspect ratio for a circular shape */
   }
   
   
   
   .image-container img{
-    width: 100%;
-    height: auto;
+    align-content: center;
     aspect-ratio: 1/1;
+    height:auto;
+    width:100%;
   }
   
   .text-container {
     flex: 1;
-    width:75%;
+    width:90%;
   }
   
   .text-container h2 {
@@ -167,20 +170,6 @@
   
 }
 @media only screen and  (max-width: 1200px) {
-  .about-content {
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    align-items: center;
-    
-  }
-
-  .image-container {
-    order: -1; /* Move the image container to the top */
-    width:40%;
-    height:auto;
-    margin-bottom: 30px;
-  }
 
   .text-container {
     text-align: left;
@@ -220,4 +209,35 @@
     color:white;
     font-size: 24px;
   }
+}
+@media only screen and  (max-width: 2000px) {
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    align-items: center;
+    
+  }
+
+  .image-container {
+    order: -1; /* Move the image container to the top */
+    
+  }
+  .text-container {
+    text-align: left;
+    font-size: 40px;
+  }
+
+}
+
+#btn {
+ margin-left: 45%;
+ padding: 10px 20px;
+ border-radius: 15px;
+ border:#000 solid 4px;
+ background-color: rgb(216, 145, 169);
+ box-shadow: 2px 2px #c0c0c0 ;
+}
+#btn:hover{
+  background-color:rgb(224, 78, 166)
 }
